feat:이메일 전송 로직 구현

--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,14 @@ dependencies {
 
 	//메일
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
-	implementation 'jakarta.mail:jakarta.mail-api'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+
+    //토큰
+    implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'
+
 
 }
 
